added image and image message + basic styling and font

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="img-container">
-
+        <img src="img2.jpg" alt="presentation image retro look">
+        <div class="img-text">
+            <p>Join us</p>
+        </div>
     </div>
     <div class="signup-container">
         <div class="intro">
