--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -17,11 +20,37 @@
     </div>
     <div class="signup-container">
         <div class="intro">
-
+            <p>This is not a real form ! But it sure looks damn good
+            <img src="wink.svg" alt="a robot winking"
+            style="width: 1em; height: auto;"></p>
+            <p><em>Sign up now</em> if you want to hack the universe !</p>
         </div>
         <form action="" method="post">
             <div class="form-container">
-                
+                <label for="first-name">
+                    First name
+                    <input type="text" id="first-name">
+                </label>
+                <label for="last-name">
+                    Last Name
+                    <input type="text" id="last-name">
+                </label>
+                <label for="email">
+                    Super secret e-mail
+                    <input type="email" id="email">
+                </label>
+                <label for="username" >
+                    Cool hacker name
+                    <input type="text" id="username">
+                </label>
+                <label for="pass">
+                    Password
+                    <input type="password" id="pass">
+                </label>
+                <label for="pass">
+                    Password
+                    <input type="password" id="pass">
+                </label>
             </div>
         </form>
     </div>
