--- a/index.html
+++ b/index.html
@@ -25,33 +25,34 @@
             style="width: 1em; height: auto;"></p>
             <p><em>Sign up now</em> if you want to hack the universe !</p>
         </div>
-        <form action="" method="post">
+        <form action="#" method="post">
             <div class="form-container">
-                <label for="first-name">
-                    First name
-                    <input type="text" id="first-name">
+                <label for="first-name" >
+                    First name *
+                    <input type="text" id="first-name" required placeholder=" ">
                 </label>
-                <label for="last-name">
-                    Last Name
-                    <input type="text" id="last-name">
+                <label for="last-name" >
+                    Last Name *
+                    <input type="text" id="last-name" required placeholder=" ">
                 </label>
-                <label for="email">
-                    Super secret e-mail
-                    <input type="email" id="email">
+                <label for="email" >
+                    Super secret e-mail *
+                    <input type="email" id="email" required placeholder=" ">
                 </label>
-                <label for="username" >
-                    Cool hacker name
-                    <input type="text" id="username">
-                </label>
-                <label for="pass">
-                    Password
-                    <input type="password" id="pass">
+                <label for="username">
+                    Cool hacker name *
+                    <input type="text" id="username" required placeholder=" "> 
                 </label>
                 <label for="pass">
-                    Password
-                    <input type="password" id="pass">
+                    Password *
+                    <input type="password" id="pass" required placeholder=" ">
+                </label>
+                <label for="pass">
+                    Confirm Password *
+                    <input type="password" id="pass" required placeholder=" ">
                 </label>
             </div>
+            <button type="submit">Join the Organisation</button>
         </form>
     </div>
 </body>
