--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <div class="form-container">
                 <label for="first-name" >
                     First name *
-                    <input type="text" id="first-name" required placeholder=" ">
+                    <input type="text" id="first-name" required placeholder=" " minlength="2">
                 </label>
                 <label for="last-name" >
                     Last Name *
-                    <input type="text" id="last-name" required placeholder=" ">
+                    <input type="text" id="last-name" required placeholder=" " minlength="2">
                 </label>
                 <label for="email" >
                     Super secret e-mail *
@@ -41,15 +41,15 @@
                 </label>
                 <label for="username">
                     Cool hacker name *
-                    <input type="text" id="username" required placeholder=" "> 
+                    <input type="text" id="username" required placeholder=" " minlength="2"> 
                 </label>
                 <label for="pass">
                     Password *
-                    <input type="password" id="pass" required placeholder=" ">
+                    <input type="password" id="pass" required placeholder=" " minlength="8">
                 </label>
                 <label for="pass">
                     Confirm Password *
-                    <input type="password" id="pass" required placeholder=" ">
+                    <input type="password" id="pass" required placeholder=" " minlength="8">
                 </label>
             </div>
             <button type="submit">Join the Organisation</button>
